book page + update reading list

--- a/_posts/waking-up/2020-10-04-waking-up.md
+++ b/_posts/waking-up/2020-10-04-waking-up.md
@@ -4,6 +4,7 @@ title: Waking Up
 date: 2020-10-04
 tag:
   - book
+status: reading
 image: /waking-up.jpg
 goodreads: "https://www.goodreads.com/book/show/18774981-waking-up"
 book-author: Sam Harris
